# v8inspector

./: CMakeLists.txt  FindICU.cmake  FindLIBUV.cmake  FindLZ.cmake  FindOPENSSL.cmake  FindV8.cmake  Makefile  Makefile.osx  Readme.md  assert.c  base64.h  compress_json.py  env.h  http_parser.cc  inspector-demo.vcxproj  inspector-demo.vcxproj.filters  inspector_agent.cc  inspector_agent.h  inspector_agent_version.h  inspector_io.cc  inspector_io.h  inspector_socket.cc  inspector_socket.h  inspector_socket_server.cc  inspector_socket_server.h  main.cc  node_protocol_dump  sample.js  shell.cc  standalone_protocol_dump  v8_inspector_protocol_json.h  v8inspector.sln  v8inspector.vcxproj  v8inspector.vcxproj.filters
